<resources>
    <string name="app_name">Cookbook</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_recipe">Add new recipe</string>
    <string name="add_recipe">Přidat recept</string>
    <string name="recipes">Recepty</string>
    <string name="ackee_logo_description">Ackee logo</string>
    <string name="time_icon_description">time icon</string>
    <string name="recipe_duration">%1$s min.</string>
    <string name="large_image_in_recipe_detail">large image in recipe detail</string>
    <string name="ingredients_title">Ingredience</string>
    <string name="preparation_title">Příprava jídla</string>
    <string name="rate_the_recipe_title">Ohodnoť tento recept</string>
    <string name="recipe_name">Název receptu</string>
    <string name="recipe_info">Úvodní text</string>
    <string name="ingredients">Ingredience</string>
    <string name="add_button_text">+ přidat</string>
    <string name="process">Postup</string>
    <string name="time">Čas</string>
    <string name="your_ingredient">Vaše ingredience</string>
    <string name="required_field">Povinné pole</string>
    <string name="must_contain">Musí obsahovat \"ackee\"</string>
    <string name="no_recipe_available">Žádný recept k dispozici</string>
    <string name="connection_error">Connection error.</string>
    <string name="unknown_error">Unknown error occurred.</string>
    <string name="recipe_not_found">Recipe not found</string>
</resources>
