<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activity.RecipeListActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:theme="@style/Widget.AppTheme.AppBar.Blue"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:elevation="4dp"
                app:title="@string/add_recipe"
                app:titleTextColor="@android:color/black" />
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recipeNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:background="@android:color/white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/dark_grey"
            app:boxStrokeColor="@color/colorPrimary"
            app:errorEnabled="true"
            app:hintTextColor="@color/dark_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipeNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/recipe_name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recipeInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:background="@android:color/white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/dark_grey"
            app:boxStrokeColor="@color/colorPrimary"
            app:errorEnabled="true"
            app:hintTextColor="@color/dark_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipeNameLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipeInfoEditText"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/recipe_info"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/recipeIngredientsTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:text="@string/ingredients"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipeInfoLayout" />

        <LinearLayout
            android:id="@+id/ingredientsListLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:gravity="start"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recipeIngredientsTitle" />

        <TextView
            android:id="@+id/addIngredientButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:background="@drawable/bg_add_button"
            android:clickable="true"
            android:focusable="true"
            android:padding="@dimen/small_margin"
            android:text="@string/add_button_text"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ingredientsListLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recipeProcessLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:background="@android:color/white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/dark_grey"
            app:boxStrokeColor="@color/colorPrimary"
            app:errorEnabled="true"

            app:hintTextColor="@color/dark_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addIngredientButton">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipeProcessEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/process"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/recipeTimeLayout"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:background="@android:color/white"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/dark_grey"
            app:boxStrokeColor="@color/colorPrimary"
            app:errorEnabled="true"
            app:hintTextColor="@color/dark_grey"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipeProcessLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recipeTimeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/time"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
